# Copyright (c) 2018 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_source_set("audio_generator_unittests") {
  testonly = true

  sources = [
    "audio_generator_impl_unittest.cc",
  ]

  deps = [
    "..:audio_processing",
    "../../../rtc_base:rtc_base_approved",
    "../../../test:test_support",
  ]
}
